frontend/bulmapress/viame.sass
/* ========================= */
/* Typography Styles
/* ========================= */

h1,
h2
  font-weight: 400 !important
  // important to override bulma styles

/* ========================= */
/* Components
/* ========================= */

// Buttons
.button
  background: rgba(255, 255, 255, .8)
  border: 3px solid $secondary
  box-shadow: 0 1px 5px rgba(0, 0, 0, .2)
  color: $secondary
  font-weight: 600
  transition: .25s background ease-in-out

  &:hover
    background: $white
    border-color: $secondary
    color: $secondary

// Video Play Button
.has-play-btn
  position: relative

  &::after
    background: url('../../img/play-button.svg') center center no-repeat
    background-size: 100%
    content: ''
    height: 42px
    left: 50%
    pointer-events: none
    position: absolute
    top: 50%
    transform: translate(-50%, -50%)
    width: 42px

// Cards
.card
  display: block
  padding: 20px

  .card-label
    display: block

// Carousels
.carousel
  .slider
    &:focus
      outline: none !important

    .slider-container
      overflow: visible !important

    .slider-pagination
      bottom: initial
      padding-top: 20px
      top: 100%

      .slider-page
        background: $grey
        height: 6px
        width: 6px

    .slider-item
      border: 0

// Accordions
.accordion
  h2
    font-weight: normal
    margin: 0 0 .5em

  input
    opacity: 0
    position: absolute
    z-index: -1

    &:checked
      + .acc-panel-label
        background: darken($secondary, 10%)
        &::after
          transform: rotate(90deg)
      ~ .acc-panel-content
        max-height: 200vh
        padding: 1em

  /* Accordion styles */
  .acc-panels
    border-radius: 4px
    overflow: hidden

    .acc-panel
      border-bottom: 1px solid $white
      color: $white
      overflow: hidden
      width: 100%

      &:last-of-type
        border-bottom: 0

      &-label
        background: $secondary
        cursor: pointer
        display: flex
        font-weight: bold
        justify-content: space-between
        padding: 1em

        /* Icon */
        &:hover
          background: darken($secondary, 10%)

        &::after
          content: '\276F'
          height: 1em
          text-align: center
          transition: all .35s
          width: 1em

      &-content
        background: $white
        color: $primary
        max-height: 0
        overflow: hidden
        padding: 0 1em
        transition: all .35s

      &-close
        background: $secondary
        cursor: pointer
        display: flex
        font-size: .75em
        justify-content: flex-end
        padding: 1em

        &:hover
          background: darken($secondary, 10%)

// Kitliography
.kwbib
  border-top: 1px solid lighten($grey, 40%)

.kwbib-entry
  border-bottom: 1px solid lighten($grey, 40%)
  margin: 0 !important
  padding: 5px 0

// Awesome Post Embeds
.ape_post
  background: none
  border: 0
  padding: 0 15px

  &:hover
    box-shadow: none

  .ape_post_image_wrapper
    border: 8px solid $white

  .ape_post_content
    padding: 15px

    .ape_post_title
      a
        color: $white

        &:hover
          color: lighten($primary, 40%)

/* ========================= */
/* Header Styles
/* ========================= */

.custom-logo
  max-width: 120px

.navbar-brand
  height: 100%
  padding: 8px 0

.nav-menu
  &.is-active
    & + .navbar-menu
      // THIS RULE IS REQUIRED TO MAKE THE MENU OPEN IN MOBILE
      display: block !important

/* ========================= */
/* Footer Styles
/* ========================= */

.site-footer
  background: $primary
  color: $white

  a
    color: lighten($secondary, 40%)

/* ========================= */
/* Hero Styles
/* ========================= */

.hero
  align-items: center
  display: flex
  flex-direction: row
  margin-bottom: 0 !important
  min-height: 480px
  overflow: hidden
  position: relative

  .hero-text
    padding: 0 25px
    position: relative
    width: 100%
    z-index: 2

    h1
      color: $white
      font-size: 36px
      line-height: 1.2 !important
      // important to override bulma styles

  .hero-image
    height: 100%
    object-fit: cover
    position: absolute
    width: 100%
    z-index: 1

.hero-alert
  background: $secondary
  margin-bottom: 0 !important
  padding: 20px 0 30px

  .alert-heading,
  .alert-text,
  .alert-link
    color: $white

  .alert-heading
    margin: 0 0 5px

  .alert-link
    text-decoration: underline

    &:hover
      color: lighten($secondary, 40%)

/* ========================= */
/* Homepage
/* ========================= */

.action-cards
  padding: 24px 0

  .card
    border-radius: 3px
    border-top: 3px solid $accent
    text-align: center

    .card-icon
      max-height: 50px
      max-width: 50px

.home
  .section
    header
      margin: 0 auto
      max-width: 960px
      padding-bottom: 24px

      h2,
      h3
        margin: 0

    &.home-about-viame
      background: rgb(255, 255, 255)
      background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 50%, rgba(16, 108, 168, .1) 100%) !important
      border-bottom: 3px solid rgba(16, 108, 168, .3)

    &.home-latest-news
      background: $primary

      .content > *
        color: $white

    &.home-deep-dive
      padding-bottom: 75px

      .viame-event
        border-bottom: 1px solid lighten($grey, 40%)

        &:last-of-type
          border-bottom: 0

        .date-label,
        .time-label
          font-weight: 300
          padding-left: 20px

        .date-time
          font-size: 13px !important
          font-weight: 500

        svg
          &.iconify
            height: 1.5em !important
            width: 1.5em !important

    &.home-about-kitware
      background: url('../../img/hexagon_gray_bg.png') center center no-repeat
      position: relative

      & > *
        color: $white !important

        h2
          color: $white !important
          font-size: 48px

      & > :not(.is-overlay)
        position: relative
        z-index: 2

      header
        border-bottom: 1px solid $white

      .about-blurb
        a
          color: lighten($secondary, 50%)

      footer
        padding-top: 10px

      .is-overlay
        background: rgba(16, 108, 168, .8)

